k8s/platform/manifests/ingress-nginx/policy-reporter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: policy-reporter-ui
  namespace: policy-reporter
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - policy-reporter.90.156.210.86.nip.io
      secretName: policy-reporter-ui-tls
  rules:
    - host: policy-reporter.90.156.210.86.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: policy-reporter-ui
                port:
                  number: 8080
