k8s/platform/manifests/ingress-nginx/test-nginx-nipio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - 90.156.210.86.nip.io
      secretName: nip-io-tls

  rules:
    - host: 90.156.210.86.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000
